# pytest-cleanslate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/pytest_cleanslate/: __init__.py  __main__.py  plugin.py  reduce.py
tests/: test_cleanslate.py  test_reduce.py
