[project]
name = "pytest-cleanslate"
version = "1.0"
description = "Collects and executes pytest tests separately"
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X"
]
authors = [
    { name="Juan Altmayer Pizzorno", email="juan@altmayer.com" },
]
dependencies = [
    "pytest",
    "py",
    "pytest-forked",
]

[project.urls]
"Repository" = "https://github.com/jaltmayerpizzorno/pytest_cleanslate"

[project.entry-points.pytest11]
pytest_cleanslate = "pytest_cleanslate.plugin"
