[project]
name = "pytest-cleanslate"
dynamic = ["version"]
description = "Collects and executes pytest tests separately"
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X"
]
authors = [
    { name="Juan Altmayer Pizzorno", email="juan@altmayer.com" },
]
dependencies = [
    "pytest",
    "py",
    "pytest-forked",
    "tqdm",
]

[project.urls]
"Repository" = "https://github.com/plasma-umass/pytest_cleanslate"

[project.entry-points.pytest11]
pytest_cleanslate = "pytest_cleanslate.plugin"

[project.scripts]
cleanslate-reduce = "pytest_cleanslate.reduce:main"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "pytest",
]

build-backend = "setuptools.build_meta"
[tool.setuptools.dynamic]
version = {attr = "pytest_cleanslate.__version__"}

[tool.pytest.ini_options]
required_plugins = [
    'pytest-cleanslate',    # must be installed to test
    'pytest-asyncio',       # required by tests
]
